<resources>
<string name="app_name">Saksham</string>
<string name="back">Back</string>
<string name="next">next</string>
<string name="select_date">Select Date</string>
<string name="select_content">Select Content</string>
<string name="select_module">Select module</string>
<string name="status">Status*</string>
<string name="sub_total_shg_member">Sub Total</string>
<string name="other_particepant">Other participants</string>
<string name="total_participants">Total Participants</string>
<string name="value_from_backend">XXXXXX</string>
<string name="select_block">Select Block</string>
<string name="select_gp">Select GP</string>
<string name="select_village">Select Village</string>
<string name="date_of_training">Date of Training</string>
<string name="date_of_evaluation">Date of Evaluation</string>
<string name="block">Block</string>
<string name="gp">GP</string>
<string name="village">Village</string>
<string name="unsync_details">Unsynced Details:</string>
<string name="unsync_baseline">Baseline Data</string>
<string name="unsync_training">Training Data</string>
<string name="unsync_evaluation">Evaluation Data</string>
<string name="data_info">Progress so far:</string>
<string name="data_infoB">Baseline Completed</string>
<string name="data_infoT">Training Completed</string>
<string name="data_infoE">Evaluation Completed</string>
<string name="nodataFound">SHGs Baseline is not done under this village!!!</string>
<string name="location">Location</string>
<string name="GPSAlertDialogTitle">Gps Alert!</string>
<string name="GPSAlertDialogMessage">Please open your GPS. </string>
<string name="number_of_shg_participating">SHG Participating</string>
<string name="nubmber_of_shg_member_participating">SHG member Participating</string>
<string name="other_member_participating">Other member Participating</string>
<string name="content_module">Modules</string>
<string name="Toast_toast_take_gps">Gps can not be empty.</string>
<string name="save">Save</string>
<string name="photo_gps">Photo and GPS </string>
<string name="take_photo">Take Photo</string>
<string name="capture_gps">Capture GPS</string>
<string name="upload_data">Upload Data</string>
<string name="title_activity_home">HomeActivity</string>
<string name="navigation_drawer_open">Open navigation drawer</string>
<string name="navigation_drawer_close">Close navigation drawer</string>
<string name="nav_header_title">Android Studio</string>
<string name="nav_header_subtitle">android.studio@android.com</string>
<string name="nav_header_desc">Navigation header</string>
<string name="action_settings">Settings</string>
<string name="add_participants">Add Participants</string>
<string name="forgot_mpin">Forgot Mpin?</string>
<string name="menu_home">Home</string>
<string name="menu_gallery">Gallery</string>
<string name="menu_slideshow">Slideshow</string>
<string name="menu_tools">Tools</string>
<string name="menu_share">Share</string>
<string name="menu_send">Send</string>
<string name="are_sure_exit">Send</string>
<string name="str_yes">yes</string>
<string name="str_no">No</string>
<string name="Proceed">Proceed</string>
<string name="menu_logout">Logout</string>
<string name="menu_change_Language">Change Language</string>
<string name="login">Login</string>
<string name="no_internet_dialog">No Internet!</string>
<string name="server_error_dialog">Server Error!</string>
<string name="module_add_Training">Training</string>
<string name="module_Report">Reports</string>
<string name="module_Evaluation">Evaluation</string>
<string name="module_Evaluation3">Evaluation</string>
<string name="list_of_shg">List of SHGs</string>
<string name="list_of_shg_for_evaluation">List of SHGs for Evaluation</string>
<string name="list_of_shg_name">Name of SHGs</string>
<string name="list_of_shg_modules">Modules</string>
<string name="list_of_shg_training_date">Date of Training</string>
<string name="list_of_shg_selection_evaluation">Select for evaluation</string>
<string name="number_of_shg_member">Number of Members in Evaluation</string>
<string name="languge_change">Change your Language</string>
<string name="number_of_selected_shg_for_evaluation">Selected SHGs For Evaluation</string>
<string name="number_of_shg_present_in_meeting">No. of member present in meeting</string>
<string name="selectShg">Select SHGs</string>
<string name="openDrawer">Drawer Open</string>
<string name="closeDrawer">Drawer Close</string>
<string name="select_language">Select Language</string>
<string name="suggestion">Suggestion: Select 2 language. E.g. English and Local</string>
<string name="viewReportLabel">View Report</string>
<string name="selectMonth">Select Month</string>
<string name="date">Date</string>
<string name="locationOfTraining">Location</string>
<string name="shgParticipated">No of SHG Participated</string>
<string name="shgMemberParticipated">No of SHGs Member Participated</string>
<string name="otherMemberParticipated">Other Member Participated</string>
<string name="modules">Modules</string>
<string name="enter_otp">Enter OTP</string>
<string name="submit">Submit</string>
<string name="cancel">Cancel</string>
<string name="confirm_pass">Confirm New Password</string>
<string name="enter_pass">New Password</string>
<string name="reset_pass_TV">Re-Set Password </string>
<string name="send_otp">Send OTP</string>
<string name="enter_mobile">Enter Your Mobile number</string>
<string name="otp_creation">OTP Creation</string>
<string name="total">Total</string>
<string name="gotoHome">Go To Home</string>
<string name="noofDays">No. of days training provided in the month:</string>
<string name="noofShgs">No. of SHGs uniquely trained in the month:</string>
<string name="noofshgsbaselinedone">No. of SHGs whose baseline done:</string>
<string name="noofshgsassesmentdone">No. of SHGs whose evaluation done: </string>
<string name="app_exit_dialog">Do you want to exit?</string>
<string name="user_id">Enter Your User Id</string>
<string name="user_password">Enter Your Password</string>
<string name="forgot_password">Forgotten password?</string>
<string name="login_massege">Please,Login with User Id only.</string>
<string name="hello_blank_fragment">Hello blank fragment</string>
<string name="pending_shgs">SHGs pending for evaluation</string>
<string name="evaluation_Question_Title1">Savings &amp; Credit</string>
<string name="evaluation_Question1">1. No. of SHG members done transaction in individual bank account in last 2 months</string>
<string name="evaluation_Question2">2. No. of members who have not taken any loan from SHG</string>
<string name="evaluation_Question_Title2">Insurance &amp; Pension</string>
<string name="evaluation_Question3">3. No. of SHG members have life insurance (PMJJBY)</string>
<string name="evaluation_Question4">4. No. of SHG members have accidental insurance(PMSBY)</string>
<string name="evaluation_Question5">5. No. of SHG members enrolled under health insurance Scheme (PM-JAY/State specific schemes)</string>
<string name="evaluation_Question6">6. No. of SHG members enrolled under pension scheme (Atal Pension Yojana/ PM Shram Yogi Maandhan)</string>
<string name="evaluation_Question_Title3">Digital finance</string>
<string name="evaluation_Question7">7. No. of SHGs done transaction through BC In last 2 months</string>
<string name="evaluation_Question8">8. No. of SHG members done transaction through BC In last 2 month</string>
<string name="evaluation_Question_Title4">Individual financing</string>
<string name="evaluation_Question9">9.   No. of SHG members having individual OD facility</string>
<string name="evaluation_Question10">10.  No. of SHG members availed MUDRA loan for</string>
<string name="toast_language_max_selection">You can select only 2 language.</string>
<string name="faild_code">"Failed code, try again!"</string>
<string name="not_eligible_for_evolution">"Not eligible for evaluation"</string>
<string name="please_select_atlest_one_mod">"Please select atleast one module"</string>
<string name="cant_select_more_than3">"Can't select more than 3 modules"</string>
<string name="please_select_atleast_one_member">"Please Select atleast one member."</string>
<string name="please_select_atleast_one_shg">"Please select atleast one SHG."</string>
<string name="please_select_atleast_one_module">"Please select atleast one module."</string>
<string name="toast_language_min_selection">Please select atleast 1 language</string>
<string name="toast_otp_wrong">Entered OTP is wrong.</string>
<string name="toast_registered_mobile">Please,enter registered mobile number</string>
<string name="toast_language_chang">Your Language is Changed Sucessfully.</string>
<string name="toast_evaluation_morethen_zero">Enter number should be more then Zero.</string>
<string name="toast_evaluation_shgMember">Enter number is Grteater then total SHGs Member</string>
<string name="toast_nonot_matched_fromlocal">Entered Number is not Matched or Login First.</string>
<string name="toast_basline_shg_not_found">In This location shg is not found</string>
<string name="toast_basline_entervalid_number">Please Enter Valid Member</string>
<string name="toast_evaluation_form_fill_msg">Please Complet Evaluation form !</string>
<string name="toast_nodata_found">No Data Found.</string>
<string name="toast_FAIL">FAIL</string>
<string name="otp_greeting">Namaskar!</string>
<string name="otp_massage">is One Time Password(OTP) for the Saksham application. Do not share it with anyone.</string>
<string name="toast_fill_details">Please fill appropriate details.</string>
<string name="toast_take_picture">Please take the picture.</string>
<string name="toast_nologinid">you have to login first.</string>
<string name="toast_error">Member can not more then Total member.</string>
<string name="error_mobileno">Please Enter Valid Mobile Number.</string>
<string name="error_mobileno_notregistered">Mobile Number is not registered</string>
<string name="error_mobileno_notmatched">Entered Number is not Matched or Login First</string>
<string name="error_password">Password length is short.</string>
<string name="error_confirm_password">Confirm password length can not be less 6.</string>
<string name="error_confirm_password_not_matched">Confirm password not matched.</string>
<string name="error_userId">Invalid user Id.</string>
<string name="error_invalid_password">Invalid Password.</string>
<string name="error_otp">Entered OTP is wrong.</string>
<string name="data_save_succesfully">Data Saved Successfully.</string>
<string name="server_error_invalid_userId">Invalid UserID !!!</string>
<string name="server_error_invalid_userId_massege">Invalid Login Id or Password.</string>
<string name="server_error_invalid_password">Invalid Password !!!</string>
<string name="server_error_invalid_password_massege">Entered Password is invalid.</string>
<string name="server_error_invalid_version">Invalid APP Version !!!</string>
<string name="server_error_invalid_version_massege">Application version is older, please update the application.</string>
<string name="server_error_invalid_date">Invalid Date !!!</string>
<string name="server_error_invalid_date_massege">Please set your mobile phone date.</string>
<string name="server_error_device_info">Device Info!!!</string>
<string name="server_error_device_info_massege">Please login from registered </string>
<string name="device">device Or reset account from web application.</string>
<string name="please_fill_proper_details">Please fill proper details.</string>
<string name="do_you_want_to_save_detail">Do you want to save these details?</string>
<string name="info_confirmation">Info Confirmation</string>
<string name="confirm_details">Confirm details</string>
<string name="enter_participant">Enter participant</string>
<string name="title_viewreport">View Report</string>
<string name="title_addtraining">Training</string>
<string name="title_dashbord">Dashboard</string>
<string name="title_baseline">Baseline</string>
</resources>