<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
       <group
            android:id="@+id/group1"
            android:checkableBehavior="single">


                <item
                    android:id="@+id/menu_dashbord"
                    android:checked="true"
                    android:title="@string/title_dashbord"
                    android:icon="@drawable/dashboard_nev_icon"
                    />
                <item
                    android:id="@+id/menu_baseline"
                    android:checked="true"
                    android:title="@string/title_baseline"
                    android:icon="@drawable/baseline_nev_icon"
                    />
                <item
                    android:id="@+id/menu_addtraining"
                    android:checked="true"
                    android:title="@string/title_addtraining"
                    android:icon="@drawable/training_nev_icon"

                    />
                <item
                    android:id="@+id/menu_evaluation"
                    android:checked="true"
                    android:title="@string/module_Evaluation"
                    android:icon="@drawable/evaluation_nev_icon"

                    />
                <item
                    android:id="@+id/menu_report"
                    android:checked="true"
                    android:title="@string/title_viewreport"
                    android:icon="@drawable/view_report_icon"
                    />
                <item
                    android:id="@+id/menu_changLanguage"
                    android:title="@string/menu_change_Language"
                    android:icon="@drawable/change_language_nev_icon"

                    />
                <item
                    android:id="@+id/menu_Logout"
                    android:checked="true"
                    android:title="@string/menu_logout"
                    android:icon="@drawable/logout_nev_icon"
                    />


        </group>


</menu>