<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorScreenBackGround"
    android:orientation="vertical">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/topLLL"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorAppName"
            android:textSize="@dimen/dimen_20"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTitleBackground"
            android:gravity="center_horizontal"
            android:text="@string/add_participants"
            android:textColor="@color/colorTitleText"
            android:textSize="@dimen/textSize22"
            android:textStyle="bold" />
       <!-- android:textColor="@color/colorScreenBackGroundDark"
-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:background="@color/colorBlackdark"
            android:gravity="center_horizontal"
            android:text="@string/list_of_shg"
            android:textColor="@color/colorTextwhite"
            android:textSize="@dimen/textSize22"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_selected_shg"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dimen_5"
            android:layout_marginLeft="@dimen/dimen_10"
            android:layout_marginRight="@dimen/dimen_10"
            android:layout_below="@+id/topLLL"
            android:layout_above="@+id/countdataLL"
            android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10"
        android:id="@+id/countdataLL"
        android:layout_above="@+id/navigateLL"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sub_total_shg_member"
                android:textSize="@dimen/dimen_20" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:gravity="center"
                android:text="@string/other_particepant"
                android:textSize="@dimen/dimen_20" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_25"
                android:gravity="center"
                android:text="@string/total_participants"
                android:textColor="@color/colorTextBlack"
                android:textSize="@dimen/dimen_20" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:id="@+id/text_sub_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="@dimen/dimen_20" />

            <EditText
                android:id="@+id/edittext_other_participent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:hint="@string/enter_participant"
                android:inputType="number"
                android:maxLength="2"/>

            <TextView
                android:id="@+id/text_total_participant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:text="@string/value_from_backend"
                android:maxLength="3"
                android:textColor="@color/colorTextBlack"
                android:textSize="@dimen/dimen_20" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:id="@+id/navigateLL"
        android:layout_marginBottom="@dimen/dimen_10"
        android:orientation="horizontal"
        android:weightSum="2">


        <Button
            android:id="@+id/add_number_participant_back"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/round_shape_dashboard"
            android:elevation="@dimen/dimen_10"
            android:translationZ="@dimen/dimen_10"
            android:layout_marginLeft="@dimen/dimen_5"
            android:padding="@dimen/dimen_5"
            android:text="@string/back"
            android:textColor="@color/colorTextButton" />

        <Button

            android:id="@+id/add_number_participent_next"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10"
            android:layout_weight="1"
            android:background="@drawable/round_shape_dashboard"
            android:elevation="@dimen/dimen_10"
            android:translationZ="@dimen/dimen_10"
            android:layout_marginRight="@dimen/dimen_5"
            android:padding="@dimen/dimen_5"
            android:text="@string/next"
            android:textColor="@color/colorTextButton" />

    </LinearLayout>

</RelativeLayout>
</LinearLayout>