<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorScreenBackGround"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorAppName"
        android:textSize="@dimen/dimen_20"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTitleBackground"
        android:gravity="center_horizontal"
        android:text="@string/confirm_details"
        android:textColor="@color/colorTitleText"
        android:textSize="@dimen/dimen_25"
        android:textStyle="bold" />
    <!--android:textColor="@color/colorScreenBackGroundDark"-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/dimen_5"
           >
              <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:text="@string/date_of_training"
                  android:textStyle="bold"
                android:textColor="@color/light_black"
                android:textSize="@dimen/dimen_20" />
            <TextView

                android:id="@+id/text_date_of_training"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:gravity="right"
                android:layout_marginRight="@dimen/dimen_5"
                android:text="@string/value_from_backend"
                android:textColor="@color/colorTextBlack"
                android:textSize="@dimen/dimen_20" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/dimen_5"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/dimen_10"
                android:text="@string/block"
                android:textColor="@color/light_black"
                android:textSize="@dimen/dimen_20" />
            <TextView

                android:id="@+id/text_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dimen_5"
                android:layout_marginTop="@dimen/dimen_10"
                android:gravity="right"
                android:text="@string/value_from_backend"
                android:textColor="@color/colorTextBlack"
                android:textSize="@dimen/dimen_20" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/dimen_5"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dimen_10"
            android:text="@string/gp"
            android:textStyle="bold"
            android:textColor="@color/light_black"
            android:textSize="@dimen/dimen_20" />
        <TextView

            android:id="@+id/text_gp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen_5"
            android:layout_marginTop="@dimen/dimen_10"
            android:gravity="right"
            android:text="@string/value_from_backend"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/dimen_20" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/dimen_5"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/dimen_10"
            android:text="@string/village"
            android:textColor="@color/light_black"
            android:textSize="@dimen/dimen_20" />
        <TextView
            android:id="@+id/text_village"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:layout_marginRight="@dimen/dimen_5"
            android:gravity="right"
            android:text="@string/value_from_backend"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/dimen_20" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/dimen_5"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/dimen_10"
            android:text="@string/number_of_shg_participating"
            android:textColor="@color/light_black"
            android:textSize="@dimen/dimen_20" />
        <TextView

            android:id="@+id/text_shg_participating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen_5"
            android:layout_marginTop="@dimen/dimen_10"
            android:gravity="right"
            android:text="@string/value_from_backend"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/dimen_20" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/dimen_5"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/dimen_10"
            android:text="@string/nubmber_of_shg_member_participating"
            android:textColor="@color/light_black"
            android:textSize="@dimen/dimen_20" />
        <TextView
            android:id="@+id/text_shg_member_participating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen_5"
            android:layout_marginTop="@dimen/dimen_10"
            android:gravity="right"
            android:text="@string/value_from_backend"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/dimen_20" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/dimen_5"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/dimen_10"
            android:text="@string/other_member_participating"
            android:textColor="@color/light_black"
            android:textSize="@dimen/dimen_20" />
        <TextView

            android:id="@+id/text_other_member_participating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen_5"
            android:layout_marginTop="@dimen/dimen_10"
            android:gravity="right"
            android:text="@string/value_from_backend"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/dimen_20" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/dimen_5"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/dimen_10"
            android:text="@string/content_module"
            android:textColor="@color/light_black"
            android:textSize="@dimen/dimen_20" />

        <TextView
            android:id="@+id/text_content_module"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen_5"
            android:layout_marginTop="@dimen/dimen_10"
            android:gravity="right"
            android:text="@string/value_from_backend"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/dimen_20" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20"
            android:background="@drawable/round_shape_dashboard"
            android:layout_marginLeft="@dimen/dimen_5"
            android:layout_marginRight="@dimen/dimen_5"
            android:elevation="@dimen/dimen_10"
            android:translationZ="@dimen/dimen_10"

            android:padding="@dimen/dimen_5"
            android:text="@string/save"
            android:textColor="@color/colorTextButton" />

    </LinearLayout>

</LinearLayout>